--- a/2024秋季学期/密码学基础/3.流加密/【流密码】0.2随机数生成器简介.md
+++ b/2024秋季学期/密码学基础/3.流加密/【流密码】0.2随机数生成器简介.md
@@ -1,14 +1,21 @@
-流密码的设计核心是密钥流生成器，它需满足以下几点：
+流密码的设计核心是密钥流生成器，评价一个密钥流生成器的安全性，可以通过下面的内容进行处理：我们可以知道，一个有限长度的数字序列一定是可重复的，即有周期的。例如，长度为 n 的二元序列，其重复周期一定小于等于 $2^{n}$。我们希望密钥的重复周期能够等于 $2^n$。当 n 足够大时， 2n 是一个很大的数。因为序列的重复周期很长，从而使密钥空间很  
+大.
+	在密码学中，对随机序列的基本要求是具有良好的随机性。它需满足以下几点：
+
+
 
 **极大的周期**：按任何种子密钥产生的序列都具有长周期。例：101001010101010101010101001 的周期是多少？
 
-良好的**统计特性**：均匀的 01 分布与游程分布，更好地掩盖明文。例：0100011010010111001111100001100.
+良好的**统计特性**：均匀的 01 分布与游程分布，更好地掩盖明文。例：0100011010010111001111100001100.如果序列是随机的，那么任何从中抽取的子序列也应该是随机的
 
 流密码的设计核心是密钥流生成器，它还需满足以下几点：
 
-**抗线性分析**：不能从一小段密钥流推知整个密钥流序列。
+**抗线性分析**：不能从一小段密钥流推知整个密钥流序列。非线性是密码学的基本要求.从计算复杂性角度来看，任何线性的数学问题都是容易计算的
 
 **抗统计分析**：不能由密钥序列 ${k_i}$ 提取密钥流生成器结构或种子密钥的足够信息。
+
+$$\begin{aligned}&\text{不可预测性}\\&\blacksquare\text{ 一是指,人们不能人为有意识地重复产生该随机序列,}\\&\blacksquare\text{ 二是指,不能由已知的序列数据求出未知的序列数据。}\\&\blacksquare\text{ 第一个性质决定是“真”还是“伪”。}\\&\blacksquare\text{ 第二个性质决定是““随机”还是“不随机”。}\\&\blacksquare\text{ 其他性质决定随机性是“好”还是“不好”。}\end{aligned}$$
+>注意，伪随机序列做不到我们的第一部分，最多智能做到我们的第二部分，即不能根据已知的序列数据求出未知的序列。伪随机序列是可以人为有意识地重复的。其不可预测性主要强调不可由已知的序列数据求出未知的序列数据。包括**如果不知道产生该序列的种子，那么不管知道序列中前面的多少比特都无法预测序列中的下一比特**。并且从产生出的序列不能推断出产生它的种子值。
 
 ## 不可区分性：
 我们的不可区分性通过我们的下面的方法定义：
