--- a/2024秋季学期/密码学基础/3.流加密/【流密码】1.线性随机数生成器.md
+++ b/2024秋季学期/密码学基础/3.流加密/【流密码】1.线性随机数生成器.md
@@ -25,6 +25,16 @@ $$S_{i+1}\equiv(aS_{i}+b)\:mod\:m,i=0,1,2,\:.\:.\:.$$
 
 如果反馈移位寄存器的**反馈函数是线性函数**（即只进行简单线性运算的函数），那么这种寄存器就被称为**线性反馈移位寄存器（Linear Feedback Shift Register，LFSR）**。形如 $f(a_1,a_2,...,a_n){=}c_na_1\oplus c_{n-1}a_2\oplus...\oplus c_1a_n,c_i$ 为 0 或 1的函数称为线性反馈函数。不失一般性，我们可用+代替 $\oplus$。
 
+形式地，用 $x^i$ 与 $s_i$ 相对应，则根据反馈函数可导出一
+个文字 $x$ 的多项式：
+
+$$g(x)=g_nx^n+g_{n-1}x^{n-1}+,...,+g_1x+g_0$$
+称 g(x) 为线性移位寄存器的连接多项式。
+
+只要选择合适的连接多项式便可使线性移位寄存器的输出序列周期达到最大值 $2^{n}-1$，并称此时的输出序列为最大长度线性移位寄存器输出序列，简称为 m 序列。
+
+仅当连接多项式 g(x)为本原多项式时，其线性移位寄存器的输出序列为m序列。
+
 #### 生成过程：
 LFSR的反馈函数就是简单地**对移位寄存器中的某些位进行异或，并将异或的结果填充到LFSR的最左端**，如图所示。对于LFSR中每一位的数据，可以参与异或，也可以不参与异或。其中，我们把参与异或的位称为**抽头**。
 ![[Pasted image 20240930110850.png]]
@@ -62,7 +72,11 @@ $$s_{i+m}\equiv \sum^{m-1}_{j=0}p_j\times s_{i+j}\space mod\space 2;s_i,p_j\in{0
 定义：n 级线性移位寄存器产生的序列 $\left\{a_i\right\}$ 的周期达到最大值 $2^n-1$ 时，称 ${a_i}$ 为 n 级 m 序列。$\mathbf{m}$ 序列的每个 n 长状态取遍 GF (2) $^\mathrm{n}$ 中的元素。$\mathbf{m}$ 序列可认为是“随机性最好”的序列。
 
 $\mathrm{GF}(2)$ 上的 $n$ 级 $m$ 序列 $\{a_i\}$ 具有如下性质}:在一个周期内,0、1出现的次数分别为 $2^{n-1}-1$ 和 $2^{n-1}$。
-在一个周期内,总游程数为 $2^{n-1}$;对 $1 {\leq}i{\leq}n{-}2$,长为 $i$ 的游程有 $2^{n+1}$ 个,且 $0 \text、1$ 游程各半;长为 $n-1$ 的 0游程一个,长为 $n$ 的1游程一个。
+在一个周期内,总游程数为 $2^{n-1}$;
+对 $1 {\leq}i{\leq}n{-}2$,长为 $i$ 的游程有 $2^{n+1}$ 个,且 $0 \text、1$ 游程各半;
+长为 $n-1$ 的 0游程一个,
+长为 $n$ 的1游程一个。
+自相关函数达到最佳值.
 
 
 #### 特征多项式：
