--- a/2024秋季学期/密码学基础/3.流加密/【流密码】4.现代安全流密码.md
+++ b/2024秋季学期/密码学基础/3.流加密/【流密码】4.现代安全流密码.md
@@ -1,12 +1,12 @@
 ## 定义：
-设 $(E,D)$，是定义在 $(K,M,C)$ 上的一个流密码算法，
+设 $(E,D)$，是定义在 $(K,M,C)$ 上的一个流密码算法，称输出序列的周期达到最大值2n 的非线性移位寄存器序列为M序列。
 
 则我们的加密通过下面的方法进行：
 $E(k,m):G(k)\oplus m=c$
 $D(k,c):G(k)\oplus c=m$
 其中我们有：$G(k)=\{0,1\}^{s}\to\{0,1\}^{M}$,也就是我们的随机数生成器。
 	
-
+非线性移位寄存器反馈函数的数量极大 GF(2)上的 n 级移位寄存器共有 2n 个状态，因此共有种不同的反馈函数，其中线性反馈函数只有 2n-1种，其余均为非线性。
 ## A5/1, A5/2
 A5 / 1是用于在 GSM 蜂窝电话标准中提供无线通信隐私的流密码。它是为 GSM 使用指定的七种算法之一。最初是保密的，但通过泄漏和逆向工程成为公众的知识。
 
