--- a/2024秋季学期/密码学基础/4.分组加密/【分组密码】4.DES标准.md
+++ b/2024秋季学期/密码学基础/4.分组加密/【分组密码】4.DES标准.md
@@ -17,10 +17,73 @@ DES 算法通常下面的几个阶段：
 
 ![[Pasted image 20241219095812.png]]
 
+## 密钥调度：
+可以看到整个算法分为两大部分——迭代加密（左边的 16 轮迭代操作），以及密钥调度（右边生成子密钥的算法）。
+
+所谓密钥调度，就是**从一把 64-bit 的主钥匙，得到 16 把 48-bit 的子钥匙**，然后把这些子钥匙用于迭代加密。那么，如何从一把主钥匙得到 16 把子钥匙呢？
+
+1. 从 64-bit 的主钥匙里面选取特定的 56 位，这一步通过一个 **置换函数 PC 1**，将 64 bit 的内容转换为 56 bit 的内容。PC-1置换表的含义是：**输出的第1位是输入的第57位**，输出的第2位是输入的第49位，依此类推。
+>PC-1:
+	57, 49, 41, 33, 25, 17, 9,
+	1, 58, 50, 42, 34, 26, 18,
+	10, 2, 59, 51, 43, 35, 27,
+	19, 11, 3, 60, 52, 44, 36,
+	63, 55, 47, 39, 31, 23, 15,
+	7, 62, 54, 46, 38, 30, 22,
+	14, 6, 61, 53, 45, 37, 29,
+	21, 13, 5, 28, 20, 12, 4
+
+
+
+3. 我们现在手上有了一个 56 位的布尔数组。把它分成左、右两个半密钥，它们都是 28-bit 的布尔数组。左、右两个半密钥都左旋（也就是循环左移。整个数组往左移，左边弹出去了的东西补到最右边去）一定位数，这个左移的位数也是指定的。有些轮次是 1 位，有些轮次是 2 位。
+
+4. 把左、右半密钥拼起来，再做一个**置换函数 PC 2**，将 56 bit 的内容转换为 48 bit 的内容。就得到了这一轮生成的子密钥。这个置换是从 56-bit 的数组里面选取指定的 48 位。PC-2置换表的含义是：输出的第1位是输入的第14位，输出的第2位是输入的第17位，依此类推。所以现在每一轮都可以生成一个 48 位的子密钥。（注意，步骤 3 并不改变左右半密钥）。
+>PC-2:
+	14, 17, 11, 24, 1, 5,
+	3, 28, 15, 6, 21, 10,
+	23, 19, 12, 4, 26, 8,
+	16, 7, 27, 20, 13, 2,
+	41, 52, 31, 37, 47, 55,
+	30, 40, 51, 45, 33, 48,
+	44, 49, 39, 56, 34, 53,
+	46, 42, 50, 36, 29, 32
+
+5. 重复步骤 2、步骤 3 一共 16 次，于是得到了 16 个 48-bit 的子密钥。上述过程会重复16次，每次生成一个48位的子密钥Ki（i=1到16）。每次生成子密钥时，C和D会根据轮数进行相应的循环左移，然后通过PC-2置换生成新的子密钥。
+
+
+现在我们手上有了 16 把子密钥。遂开始加密：
+1. 输入的明文（长度为 64 的布尔数组）做一个置换 (IP 置换)。仍然得到 64-bit 的数组（不然就丢失信息了！）
+2. 把得到的数组拆成左、右两半边。每边是 32 位长度。
+3. 每一轮迭代，都是接收一组 `L, R`，返回 `L', R'` ，作为下一轮迭代的 `L, R` . 迭代过程如下：  
+    L′=RR′=L⊕F (R, subkey)其中 F 函数（称为轮函数）是整个算法的核心，功能是：以一个子密钥，加密 32-bit 的信息。
+4. 利用之前得到的 16 个子密钥，执行步骤 3 一共 16 次。
+5. 将最终的 R 与 L 拼接，再做一次置换 (FP 置换)，即得到密文。
+![[Pasted image 20240930150739.png]]
+
+### 密码调度算法：
+我们接下来将要研究，我们是如何根据我们的长度为 64 bit 的密钥，生成我们的所有总共 16 把长度为 64 位的子密钥的。我们可以通过下面的方法来进行处理：
+
+首先，我们采用“选择置换”，从 64 位 key 中选出 56 位，我们把这 56 位叫做 `PC-1` (选择置换 1)
+
+之后，我们将我们的 56 位从中间截取，分为两个 28 位的密钥，之后，我们每一轮再把左、右半密钥旋转几位，再用我们的 `PC-2` 方法来构造子密钥：
+
+最后，我们就能根据我们的 `PC-2` 来构造出 16 个长度为 48 位的二进制密钥。
+
 ## 初始置换 IP 层
 在初始置换 IP 层，我们需要将 64bit 的输入分成 8bit 和 8bit 的结和，其中前面的 8bit，作为我们的横坐标，后面的 8bit 作为我们的纵坐标，我们根据对应的内容，找到对应的数字是多少，就能得到我们的置换。
+>IP:
+58, 50, 42, 34, 26, 18, 10, 2,
+60, 52, 44, 36, 28, 20, 12, 4,
+62, 54, 46, 38, 30, 22, 14, 6,
+64, 56, 48, 40, 32, 24, 16, 8,
+57, 49, 41, 33, 25, 17, 9, 1,
+59, 51, 43, 35, 27, 19, 11, 3,
+61, 53, 45, 37, 29, 21, 13, 5,
+63, 55, 47, 39, 31, 23, 15, 7
 
+初始置换表的含义是：输出的第1位是输入的第58位，输出的第2位是输入的第50位，依此类推。
 
+>由于没有密钥参与，在 IP 和 IP-1公开的条件下，其保密意义不大。
 ## 轮函数层（轮变换）：
 >对于十六轮论结构，首先我们由之前的 Feistel 密码结构可以知道，存在一个表达式：
 $$
@@ -43,6 +106,17 @@ $$
 
 >我们存在一个映射表，可以指定我们最终的的 48 位比特中的每一位来自于我们的哪一个原先位置。就完成了我们的对应的映射。
 
+
+>E 扩展表:
+	32, 1, 2, 3, 4, 5,
+	4, 5, 6, 7, 8, 9,
+	8, 9, 10, 11, 12, 13,
+	12, 13, 14, 15, 16, 17,
+	16, 17, 18, 19, 20, 21,
+	20, 21, 22, 23, 24, 25,
+	24, 25, 26, 27, 28, 29,
+	28, 29, 30, 31, 32, 1
+
 #### 异或层：
 输入：经过 E 扩展后的 48bit 数据，48bit 长的密钥
 输出：48bit 数据
@@ -53,48 +127,37 @@ $$
 输入：48bit 数据
 输出：32bit
 
-S 盒的实现本质上还是一个**替换表**
+S 盒的实现本质上还是一个**替换表**，但是 S 盒是 DES 中唯一的非线性变换，是 DES 安全的关键。在保密性方面，起**混淆作用**。
 
-将新的 48 比特的数据分为 8 个部分，每一个部分都是 6 比特。然后我们通过我们的一个 `S盒`，输出一个 4 比特的输出。（confusion 操作）（**需要了解的细节**）
+>关于 S 盒，据说在设计之初，有人说过有五个准测：
+>1.每个 S 盒的每一行都是整数0到15的一个置换
+>2.每个 S 盒的输出不是它的输入的线性或仿射函数
+>3.改变 S 盒的任一输入比特，其输出至少有两比特发生改变；
+>4.对任一 S 盒和任一输入 x， S(x)和 S(x⊕ 001100)至少有两位发生变化（这里 x 是一个长度为6的比特串）
+>5.对任何 S 盒和任一输入 x，以及 e,f∈ {0,1},有 S(x)≠S(x⊕ 11ef00)，其中 x 是一个长度为6的比特串；
+>6.对任何 S 盒，当它的任一输入比特位保持不变，其它5位改变时，输出数字中0和1的数目大致相等。
+
+将新的 48 比特的数据分为 8 个部分，每一个部分都是 6 比特。然后我们通过我们的一个 `S盒`，输出一个 4 比特的输出。（confusion 操作）（**需要了解的细节**）异或操作的结果是48位，接下来通过8个S盒将其转换为32位。每个S盒是一个**4行16列**的查找表，输入6位，输出4位。
 ![[Pasted image 20241219102318.png]]
 
 >每一个映射表都包括我们的 $4*16$ 的网格，我们将我们的 6 比特分为下面的几个部分，我们将我们的头尾拼接后的十进制数字作为我们的**横坐标**，我们的剩余部分拼接后转换为十进制数作为我们的**纵坐标**。然后我们查询我们的对应的 $S$ 盒来得到我们的对应的映射。其实也就是构造了一个 6 位数字到 4 比特数字的映射。我们**每一个 S 盒的映射表都不同**，设6比特输入为x = x1x2x3x4x5x6，令i = x1x6，j = x2x3x4x5，则矩阵的(i,j)位置即为对应的输出
 
 > S 盒设计能够抵御我们的**差分密码攻击**，因为我们的 S 盒设计的时候，我们的原输出一旦有一个位置发生变换，就会让我们的结果产生**两个 bit 的位置变换**。并且这两个 bit 的位置不安欢是对应的多个盒子。
 
-根据我们的一个特殊的**内部置换**，重新将我们的 32 位数据输出出来作为我们的最终答案。（比特 permutation 来实现我们的 diffusion）。
+## P 盒置换
+S盒替换后的32位数据会经过P盒置换，进一步打乱数据。P盒置换表如下：根据我们的一个特殊的**内部置换**，重新将我们的 32 位数据输出出来作为我们的最终答案。（比特 permutation 来实现我们的 diffusion）。
 
-## 密钥调度：
-可以看到整个算法分为两大部分——迭代加密（左边的 16 轮迭代操作），以及密钥调度（右边生成子密钥的算法）。
+>P:
+16, 7, 20, 21,
+29, 12, 28, 17,
+1, 15, 23, 26,
+5, 18, 31, 10,
+2, 8, 24, 14,
+32, 27, 3, 9,
+19, 13, 30, 6,
+22, 11, 4, 25
 
-所谓密钥调度，就是**从一把 64-bit 的主钥匙，得到 16 把 48-bit 的子钥匙**，然后把这些子钥匙用于迭代加密。那么，如何从一把主钥匙得到 16 把子钥匙呢？
-
-1. 从 64-bit 的主钥匙里面选取特定的 56 位，这一步通过一个 **置换函数 PC 1**，将 64bit 的内容转换为 48bit 的内容。其余的位就没用了。于是我们现在手上有了一个 56 位的布尔数组。把它分成左、右两个半密钥，它们都是 28-bit 的布尔数组。
-
-2. 左、右两个半密钥都左旋（也就是循环左移。整个数组往左移，左边弹出去了的东西补到最右边去）一定位数，这个左移的位数也是指定的。有些轮次是 1 位，有些轮次是 2 位。
-
-3. 把左、右半密钥拼起来，再做一个**置换函数 PC 2**，将 56bit 的内容转换为 48bit 的内容。就得到了这一轮生成的子密钥。这个置换是从 56-bit 的数组里面选取指定的 48 位。所以现在每一轮都可以生成一个 48 位的子密钥。（注意，步骤 3 并不改变左右半密钥）。
-
-4. 重复 步骤 2、步骤 3 一共 16 次，于是得到了 16 个 48-bit 的子密钥。
-
-现在我们手上有了 16 把子密钥。遂开始加密：
-1. 输入的明文（长度为 64 的布尔数组）做一个置换(IP置换)。仍然得到 64-bit 的数组（不然就丢失信息了！）
-2. 把得到的数组拆成左、右两半边。每边是 32 位长度。
-3. 每一轮迭代，都是接收一组 `L, R`，返回 `L', R'` ，作为下一轮迭代的 `L, R` . 迭代过程如下：  
-    L′=RR′=L⊕F(R,subkey)其中 F 函数（称为轮函数）是整个算法的核心，功能是：以一个子密钥，加密 32-bit 的信息。
-4. 利用之前得到的 16 个子密钥，执行步骤 3 一共 16 次。
-5. 将最终的 R 与 L 拼接，再做一次置换(FP 置换)，即得到密文。
-![[Pasted image 20240930150739.png]]
-
-### 密码调度算法：
-我们接下来将要研究，我们是如何根据我们的长度为 64 bit 的密钥，生成我们的所有总共 16 把长度为 64 位的子密钥的。我们可以通过下面的方法来进行处理：
-
-首先，我们采用“选择置换”，从 64 位 key 中选出 56 位，我们把这 56 位叫做 `PC-1` (选择置换 1)
-
-之后，我们将我们的 56 位从中间截取，分为两个 28 位的密钥，之后，我们每一轮再把左、右半密钥旋转几位，再用我们的 `PC-2` 方法来构造子密钥：
-
-最后，我们就能根据我们的 `PC-2` 来构造出 16 个长度为 48 位的二进制密钥。
-
+在保密性方面，起扩散作用：因为 S 盒是6位输入， 4位输出，其非线性作用是局部的，因此，需要把S盒的混淆作用扩散开来S盒与P置换的互相配合，共同确保DES的安全。
 ## 破解
 遗憾的是，我们额 DES 是不安全的，因为他的密钥长度太短了，完全支持我们的直接破解。而为了让我们的密码变得安全，我们应该考虑下面的方法：
 1. 3 DES
