--- a/2024秋季学期/密码学基础/4.分组加密/【分组密码】5.扩展DES.md
+++ b/2024秋季学期/密码学基础/4.分组加密/【分组密码】5.扩展DES.md
@@ -29,6 +29,8 @@
 ## 三重 DES：
 由于 DES 密钥太短，所以出现了三重 DES，我们的三重 DES 是安全的，我们的三重 DES 可以分为我们的两个版本，一个版本是只有两个密钥，一个版本有三个密钥。3DES（也称三重 DES），其密钥长度为56bit 的三倍，即168bit，密钥使用顺序为(K1, K2, K3)
 
+![[Pasted image 20241230224720.png]]
+
 ![[Pasted image 20241219104704.png]]
 
 即密文 C = DESK3( DES-1K2( DESK1(M) ) )
