--- a/2024秋季学期/密码学基础/4.分组加密/【分组密码】6.AES中的数学.md
+++ b/2024秋季学期/密码学基础/4.分组加密/【分组密码】6.AES中的数学.md
@@ -1,9 +1,14 @@
-AES 中用 32 bit / 4 字节表示一个数据块，用字表示。•一个字表示为系数取自 $GF(2^{8})$ 上的次数低于 4 次的多项式
+AES 中用 32 bit / 4 字节表示一个数据块，用字表示。一个字节的全体256种取值构成一个 $GF(2^{8})$,具体的转换方式，可以用下面的方法来进行计算：我们取我们的字符十六进制中的每两位作为答案。
+
+一个 $GF(2)$ 上的 8 次多项式就可以生成一个 $GF(2^{8})$。$GF(2^{8})$ 的全体元素构成加法交换群、线性空间。$GF(2^{8})$ 的元素构成乘法交换群。$GF(2^{8})$ 中的元素有多种表示：
+字节：$GF(2^8)=\{(a_7,a_6,...a_1,a_0)|a_i\in GF(2)\}$
+多项式形式 : $GF( 2^8) = \{ a_7x^7+ \ldots + a_1x+ a_0| a_i\in GF( 2) \}$ 上海水下指数形式：$GF( 2^8) ^* = \{ \alpha ^0, \alpha ^1. . . \alpha ^{254}\}$, $\alpha$ 是一个本原元对数形式：$GF(2^8)^*=\{0,1\ldots254\}$
+
+AES 采用 $GF(2)$ 上既约多项式 $m\left(x\right)$ 生成 $GF(2^8):$$m\left(x\right)=x^8+x^4+x^3+x+1$
+![[Pasted image 20241224000555.png]]
 
 例子：
-
 字：0 x57834AD1
-
 $字多项式：57x^3+83x^2+4Ax+D1$
 
 ## 群域理论
@@ -80,6 +85,17 @@ $C(x)=x^{5}+x^{3}+x^{2}+x\text{mod P(x)}$。最终等于我们的 $x^{3}$
 
 此时，如果我们把我们的对应的系数提取出来，我们就可以得到一个下面的多项式乘法：
 $(1,1,0,1)\times(0,1,1,0)=(1,0,0,0)$
+
+对于乘法，我们的一种常见的方法是，通过**矩阵来表示**。
+设
+
+$a(x)=a_3x^3+a_2x^2+a_lx+a_0$ $c(x){=}c_3x^3+c_2x^2+c_lx+c_0$ $b(x){=}b_3x^3+b_2x^2+b_lx+b_0$
+则，$b(x)=a(x)c(x)$ mod $x^4+1$ 为：
+$$a(x)c(x)\max a_1+a_2c_2+a_1c_3\\b_0=a_0c_0+a_3c_1+a_2c_2+a_1c_3\\b_1=a_1c_0+a_0c_1+a_3c_2+a_2c_3\\b_2=a_2c_0+a_1c_1+a_0c_2+a_3c_3\\b_3=a_3c_0+a_2c_1+a_1c_2+a_0c_3$$
+$$\left.\left|\begin{array}{c}b_0\\b_1\\b_2\\b_3\end{array}\right.\right|=\begin{vmatrix}c_0&c_3&c_2&c_1\\c_1&c_0&c_3&c_2\\c_2&c_1&c_0&c_3\\c_3&c_2&c_1&c_0\end{vmatrix}\begin{vmatrix}a_0\\a_1\\a_2\\a_3\end{vmatrix}$$
+$$\begin{aligned}&\text{字的}x\text{乘法:设}b(x)\text{是一个字,}\\&p(x)=xb(x)\mathrm{~mod~}x^4+1\\&\text{写成矩阵形式:}\\&\begin{pmatrix}p_0\\p_1\\p_2\\p_3\end{pmatrix}=\begin{pmatrix}00&00&00&01\\01&00&00&00\\00&01&00&00\\00&00&01&00\end{pmatrix}\begin{pmatrix}b_0\\b_1\\b_2\\b_3\end{pmatrix}\end{aligned}$$
+
+
 
 ### 逆元：
 我们如果满足我们的域中的两个多项式相乘后等于我们的单位元 1，那么我们就把我们的一个多项式叫做另一个多项式的逆元。
