--- a/2024秋季学期/密码学基础/4.分组加密/【分组密码】7.AES标准.md
+++ b/2024秋季学期/密码学基础/4.分组加密/【分组密码】7.AES标准.md
@@ -1,10 +1,18 @@
+## 概况：
 我们的 AES 标准，扩展了我们的原来的 DES 标准中的单个分组的大小，我们原本的 DES 输入是 64 比特，现在我们的输入为 128 比特。
 
 并且，我们的**密钥长度是可变的**，如果我们的密钥长度为 128 对应 4 轮迭代，192 对应 12 轮迭代，256 对应 14 轮迭代。
 
+>安全性：可以抵抗目前所有已知的攻击
+>实用性：适应各种应用环境，加解密速度快
+>扩展性：分组长度和密钥长度可扩展，可以适应社会对保密性不断提高的需求。
+
 我们的这一个既包括我们的扩散，也包括我们的混淆运算。
 ## 基本架构：
 ![[Pasted image 20241118001327.png]]
+
+![[Pasted image 20241230204326.png]]
+
 我们的对应的内容就是我们的一轮的内容。
 我们其中，我们的 Key Addition 层就是将我们的铭文和我们的对应的密钥进行混肴，从而混淆我们的最终结果和我们的对应的内容产生错误。之后，我们还有我们的 `Byte Substitution` 层，该层是一个非线性层，从而**防止我们的对应的内容被我们破解**。
 
@@ -19,10 +27,21 @@ $•$ 每一列为一个字 (word), 即 4 字节
 
 引入我们的密钥白化的原因，是因为我们如果没有我们的密钥白化，我们可能会导致我们可以根据我们的对应的字节替换或者我们的行变化**没有任何意义**，因为这一个运算的过程是**公开且可逆的**。
 
+缺少密钥白化，我们的第一步和第二步都是无意义的。
 
-## 字节替代层：
-我们的字节替代层，输入是一个字节，也就是 8bit 的数据，在我们的 AES 中，我们的所有的 S 盒都是相同的，我们的对应的替换孙发中，我们的替换原则是，根据我们的**输入的字节**找到一个对应的 $GF(2^{m})$ 关系下的逆元，然后在对这一个逆元隐形线性变换，最后等价于得到一个**替换表**。实现从**一个字节到另一个字节的映射**，这一个背后的数学原理是 $2^{8}$ 下每一个字节对应的乘法逆元。目的是为了混淆**密钥与密文的特征**。
 
+## 字节替代层（S 盒）：
+>S 盒变换是 AES 的唯一的非线性变换，是 AES 安全的关键，起密码学的混淆作用，AES 使用16个相同的 S 盒， DES 使用8个不相同的 S 盒,AES 的 S 盒有8位输入8位输出，是一种**非线性置换**, 也是 AES 种唯一的非线性运算。
+
+### 逆元变换
+我们的字节替代层，输入是一个字节，也就是 8bit 的数据，在我们的 AES 中，我们的所有的 S 盒都是相同的，我们的对应的替换孙发中，我们的替换原则是，根据我们的**输入的字节**找到一个对应的 $GF(2^{m})$ 关系下的**逆元**，这一个背后的数学原理是 $2^{8}$ 下每一个字节对应的乘法逆元。目的是为了混淆**密钥与密文的特征**。即起到了一个混淆作用
+
+### 仿射变换
+之后，对于混淆后的元素进行线性变换，等价于我们的元素在 $GF(2^{m})$ 下左乘一个转换矩阵，矩阵如下所示。最终实现从一个字节到另一个字节的映射，系数矩阵中每列都含有 5个1，说明改变输入中的任意一位，将影响输出中的 5位发生变化。
+![[Pasted image 20241224092304.png]]
+
+
+最终整合后，等价于下面的一个映射表：
 ```
 63 7c 77 7b f2 6b 6f c5 30 01 67 2b fe d7 ab 76 
 ca 82 c9 7d fa 59 47 f0 ad d4 a2 af 9c a4 72 c0 
@@ -42,6 +61,8 @@ e1 f8 98 11 69 d9 8e 94 9b 1e 87 e9 ce 55 28 df
 8c a1 89 0d bf e6 42 68 41 99 2d 0f b0 54 bb 16 
 ```
 
+>S 盒变换的第一步是把字节的值用它的乘法逆来代替，是一种非线性变换,第二步是仿射运算，是线性变换
+
 ## 列行移位：
 之后，我们将我们得到的结果按照我们的列方式排列，我们的第一列表示我们的行移位。
 ```
@@ -58,10 +79,14 @@ b3...
 4. 第四行循环左移 3 位
 
 将我们按位移动后的字节按照我们的原本的顺序重新进行操作。我们就可以得到我们的最终的结果。
+![[Pasted image 20241224092538.png]]
 
+>行移位变换属于置换，属于线性变换，本质在于把数据打乱重排， 起扩散作用。
 
 
 ## 列混淆：
+列混合变换把状态的列视为 $GF(2^8)$ 上的多项式 a(x)，乘以一个固定的多项式 c(x)，并模 $x^4+1$。其中 $c(x)=3x^{3}+x^{2}+x+2$
+
 我们的列混淆我们在我们以为后，我们利用我们的 $GF(2^{8})$ 中的对应的矩阵乘法来进行对应的变化。其中我们的矩阵的元素表示一个**多项式**，我们的矩阵的右侧也表示一个 **多项式**。将输入的 $4*4$ 的矩阵左乘一个给定的 $4*4$ 矩阵
 ![[Pasted image 20241220010728.png]]
 
@@ -74,14 +99,15 @@ b3...
 
 ![[Pasted image 20241220012528.png]]
 
-
+>列混合变换属于线性变换，起扩散作用,c(x)与 x4+1互素，从而保证 c(x)存在逆多项式 d(x),满足 c(x)d(x)=1 mod x4+1 。只有逆多项式 d(x)存在，才能正确进行解密。
 ## 轮密钥加：
 将我们的最后输出的 $4\times4$ 矩阵与一个密钥矩阵进行一个**按列加**操作，即根据每一列的结果进行按位异或操作。
 
 ## 密钥编排：
 我们根据我们的输入的不同 (128/192/256)比特，来生成不同对的密钥，128-11.192-13，256-15。 
 
-假设输入位 128 比特的 AES，那么我们就应该以字为单位（32 bit）。
+假设输入位 128 比特的 AES，那么我们就应该以**字为单位**（32 bit）。
+![[Pasted image 20241230213120.png]]
 
 我们首先将我们的原来的密钥按照下面的规则来生成下一轮的密钥，我们记从左向右的输入为 $W[0],W[1],W[2],W[3]$。那么这个时候，我们就有：
 ![[Pasted image 20241220011233.png]]
@@ -104,7 +130,7 @@ $$
 字节代换：对于我们的字循环的结果，再去经过一个 S 盒进行字节代换。
 ![[Pasted image 20241220011905.png]]
 
-轮常量异或：对于第一个字节的处理，我们需要把我们的替换后的字节，和一个 RC（Round Content），即每一轮的轮常数进行操作。
+轮常量异或：对于第一个字节的处理，我们需要把我们的替换后的字节，和一个 RC（Round Content），即每一轮的轮常数进行操作。（**去除密钥结果的对称性**）
 ![[Pasted image 20241220011949.png]]
 
 
@@ -116,6 +142,9 @@ $$
 这样进行一轮，我们就得到了一个密钥，然后我们进行 N 轮，就可以得到 N 个密钥。
 ![[Pasted image 20241219140358.png]]
 ## 解密运算：
+![[Pasted image 20241230213755.png]]
+
+
 我们加密当中因为我们的每一个运算都是可逆的。因此，我们只需要对于我们的每一个运算都去求逆。
 我们原本的最后一轮的内容要放到我们的第一轮去进行处理。注意，因为我们一开始的加密中，我们的最后一轮是没有**列混淆的**，所以我们不需要去进行我们的逆列混淆
 
@@ -125,3 +154,6 @@ $x=inv((Linear^{-1}(y)))$。
 或者我们直接编排成一个查找表即可。
 
 同时，针对 AES，我们还添加了部分硬件指令，从而在处理器级别上加快我们的查找速度。
+
+## 测信道攻击：
+测信道攻击对于 AES 是部分可行的，
