--- a/初步安排.md
+++ b/初步安排.md
@@ -1,114 +1,107 @@
-下面是调整后的十五周学习计划，每周均涵盖二进制安全、WEB 安全、深度学习和算法竞赛四个方面的内容：
 
-### 第 1 周
-- **二进制安全：**
-  - 学习内容：计算机系统基础，理解二进制表示与内存管理。
-  - 推荐资源：《Computer Systems: A Programmer's Perspective》
+### 2. 最小失真隐写的数学模型
 
-- **WEB 安全：**
-  - 学习内容：HTTP/HTTPS 协议基础，了解常见的 WEB 攻击（如 XSS）。
-  - 推荐资源：《The Web Application Hacker's Handbook》
+最小失真隐写的核心是建立一个数学模型，描述嵌入信息后的失真，并通过优化方法最小化失真。以下是最小失真隐写的数学模型：
 
-- **深度学习：**
-  - 学习内容：深度学习简介，理解神经网络的基本结构。
-  - 推荐资源：《Deep Learning》 by Ian Goodfellow
+#### 2.1 失真 函数
+失真函数 \($D (x, x')$ \) 用于衡量载体在嵌入信息前后的差异。常见的失真函数包括：
+- **均方误差（MSE）**：
+  
+  $D (x, x') = \frac{1}{N} \sum_{i=1}^{N} (x_i - x'_i)^2$
+  
+  其中，$x_i$ 是原始载体的第 \($i$ \) 个样本，\($x'_i$ \) 是嵌入信息后的第 \($i$ \) 个样本，\($N$ \) 是载体的总样本数。
 
-- **算法竞赛：**
-  - 学习内容：基础数据结构与算法复习（如数组、链表、排序算法）。
-  - 推荐资源：《Introduction to Algorithms》
+- **感知失真**：基于人类视觉或听觉系统的感知模型，计算嵌入信息后的感知差异。
 
-### 第 2 周
-- **二进制安全：**
-  - 学习内容：汇编语言基础，理解指令集架构。
-  - 推荐资源：在线教程 [Codecademy - Learn Assembly Language](https://www.codecademy.com)
+#### 2.2 嵌入信息
+嵌入信息的过程可以表示为一个映射函数 \($f (x, m)$\)，其中：
+- $x$ 是原始载体。
+- $m$ 是隐藏信息。
+- \($f (x, m)$\) 是嵌入信息后的载体。
 
-- **WEB 安全：**
-  - 学习内容：深入理解会话管理与认证机制。
-  - 推荐资源：《HTTP: The Definitive Guide》
+#### 2.3 优化问题
+最小失真隐写的优化问题可以表示为：
+$$[
+\min_{x'} D (x, x') \quad \text{s.t.} \quad \text{信息嵌入条件}
+]$$
+即在满足信息嵌入条件的前提下，最小化嵌入信息后的失真。
 
-- **深度学习：**
-  - 学习内容：反向传播算法，优化神经网络。
-  - 推荐资源：Coursera - Neural Networks and Deep Learning
-
-- **算法竞赛：**
-  - 学习内容：递归与动态规划基础。
-  - 推荐资源：[LeetCode](https://leetcode.com/)
-
-### 第 3 周
-- **二进制安全：**
-  - 学习内容：逆向工程基础，学习 Ghidra、IDA Pro 等工具。
-  - 推荐资源：《Practical Reverse Engineering》
-
-- **WEB 安全：**
-  - 学习内容：SQL 注入攻击与防护，学习数据库安全基础知识。
-  - 推荐资源：《SQL Injection Attacks and Defense》
-
-- **深度学习：**
-  - 学习内容：卷积神经网络（CNN）基础，应用于图像处理。
-  - 推荐资源：Stanford CS 231 n
-
-- **算法竞赛：**
-  - 学习内容：贪心算法及其应用。
-  - 推荐资源：《Competitive Programming 3》
-
-### 第 4 周
-- **二进制安全：**
-  - 学习内容：缓冲区溢出漏洞，学习漏洞利用基础。
-  - 推荐资源：《Hacking: The Art of Exploitation》
-
-- **WEB 安全：**
-  - 学习内容：学习 XSS（跨站脚本攻击）及其防御技术。
-  - 推荐资源：[PortSwigger Academy](https://portswigger.net/web-security)
-
-- **深度学习：**
-  - 学习内容：循环神经网络（RNN）基础及其应用于自然语言处理。
-  - 推荐资源：《Sequence Modeling With Deep Learning》
-
-- **算法竞赛：**
-  - 学习内容：图论基础与最短路径算法。
-  - 推荐资源：《Graph Theory with Applications》
-
-### 第 5 周
-- **二进制安全：**
-  - 学习内容：格式化字符串漏洞，理解其攻击原理与防护方法。
-  - 推荐资源：在线实验 [Exploit-Exercises](https://exploit-exercises.com/)
-
-- **WEB 安全：**
-  - 学习内容：CSRF（跨站请求伪造）攻击原理及防御。
-  - 推荐资源：[OWASP Top Ten](https://owasp.org/www-project-top-ten/)
-
-- **深度学习：**
-  - 学习内容：深度学习模型的优化与调参。
-  - 推荐资源：《Deep Learning with Python》 by François Chollet
-
-- **算法竞赛：**
-  - 学习内容：高级排序算法及其应用。
-  - 推荐资源：[AtCoder](https://atcoder.jp/)
-
-### 第 6 周
-- **二进制安全：**
-  - 学习内容：恶意软件分析基础，学习常见恶意软件的行为与分析方法。
-  - 推荐资源：《Practical Malware Analysis》
-
-- **WEB 安全：**
-  - 学习内容：学习身份认证中的 OAuth 协议及其安全性。
-  - 推荐资源：[WebGoat](https://owasp.org/www-project-webgoat/)
-
-- **深度学习：**
-  - 学习内容：深度学习中的正则化技术（如 Dropout）。
-  - 推荐资源：[Kaggle](https://www.kaggle.com/)
-
-- **算法竞赛：**
-  - 学习内容：高级数据结构，学习并查集和线段树的实现与应用。
-  - 推荐资源：MIT OpenCourseWare - Advanced Data Structures
-
-### 第 7-15 周
-- **接下来的八周将按照类似的结构继续深挖：**
-  - **二进制安全：** 逐步深入学习逆向工程、漏洞利用、恶意软件分析、模糊测试等内容，结合实践提升技能。
-  - **WEB 安全：** 深入学习各类 WEB 攻击的防护，涉及如网络钓鱼、点击劫持、Web API 安全等内容。
-  - **深度学习：** 继续深化对不同深度学习模型（如 GANs、强化学习）的理解，并应用于实际项目。
-  - **算法竞赛：** 加强对高级算法与数据结构的掌握，模拟参加实际竞赛，提升竞赛能力。
-
-这样安排能确保每周的学习内容丰富且互相补充，让你在每个领域都能逐步提高。希望这个计划对你有帮助！
+---
 
 
+```python
+import numpy as np
+
+def qim_encode(data, message, delta):
+    """
+    使用QIM方法嵌入隐藏信息
+    :param data: 原始载体数据（一维数组）
+    :param message: 隐藏信息（二进制字符串）
+    :param delta: 量化步长
+    :return: 嵌入信息后的载体数据
+    """
+    encoded_data = np.copy(data)
+    message_index = 0
+    
+    for i in range(len(data)):
+        if message_index >= len(message):
+            break
+        
+        # 量化
+        quantized = np.round(data[i] / delta) * delta
+        
+        # 嵌入信息
+        if message[message_index] == '1':
+            encoded_data[i] = quantized + delta / 2
+        else:
+            encoded_data[i] = quantized - delta / 2
+        
+        message_index += 1
+    
+    return encoded_data
+
+def qim_decode(encoded_data, delta):
+    """
+    使用QIM方法提取隐藏信息
+    :param encoded_data: 嵌入信息后的载体数据
+    :param delta: 量化步长
+    :return: 提取的隐藏信息（二进制字符串）
+    """
+    message = ""
+    
+    for value in encoded_data:
+        # 量化
+        quantized = np.round(value / delta) * delta
+        
+        # 提取信息
+        if value > quantized:
+            message += '1'
+        else:
+            message += '0'
+    
+    return message
+
+# 示例用法
+if __name__ == "__main__":
+    # 原始载体数据
+    data = np.random.randint(0, 256, 100)
+    
+    # 隐藏信息
+    message = "1010101010"
+    
+    # 量化步长
+    delta = 8
+    
+    # 嵌入信息
+    encoded_data = qim_encode(data, message, delta)
+    print("嵌入信息后的数据:", encoded_data)
+    
+    # 提取信息
+    extracted_message = qim_decode(encoded_data, delta)
+    print("提取的隐藏信息:", extracted_message)
+```
+
+---
+
+### 总结
+最小失真隐写是一种通过优化嵌入过程来最小化载体失真的信息隐藏技术。其核心思想是通过数学模型描述嵌入信息后的失真，并通过优化方法最小化失真。最小失真隐写具有隐蔽性高、灵活性强等优点，但计算复杂度较高，且对载体敏感。通过上述公式和代码，可以深入理解最小失真隐写的原理和实现方法。
